--- a/Practical/09/22/index.html
+++ b/Practical/09/22/index.html
@@ -15,9 +15,21 @@
         </header>
         <main>
             <h1>Вітаємо вас на сайті!</h1>
-            <div id="1">
-                <p></p>
-            </div>
+            <section id="1">
+                <video width="300" height="300" controls>
+                    <source src="videoplayback1.mp4" type="video/mp4">
+                </video>
+            </section>
+             <section id="2">
+                <video width="300" height="300" controls>
+                    <source src="videoplayback2.mp4" type="video/mp4">
+                </video>
+            </section>
+             <section id="3">
+                <video width="300" height="300" controls>
+                    <source src="videoplayback3.mp4" type="video/mp4">
+                </video>
+            </section>
         </main>
         <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
     </body>
