coments/additional task

--- a/Homework/09/25/index.html
+++ b/Homework/09/25/index.html
@@ -10,26 +10,34 @@
     <header> 
         <h1> Сайт команди</h1>
     </header>
-
     <nav aria-label="Головне меню">
         <a href="#about">Про нас</a>
         <a href="#news">Новини</a>
         <a href="#gallery">Галерея</a>
         <a href="#contacts">Контакти</a>
     </nav>
-
     <main>
         <section id="about">
             <h2>Про нас</h2>
             <article>
-            <h3>Хто ми?</h3>
-                <p>Ми коианда студентів, які працюють над навчальним проєктом.</p>
+                <h3>Хто ми?</h3>
+                <p>Ми команда студентів, які працюють над навчальним проєктом.</p>
             </article>
         </section>
     </main>
-
     <footer>
         Selector0073 | Каріна Батура | Катя Каташинська
     </footer>
 </body>
 </html>
+
+
+<!--
+Ключові зміни для доступності:
+- Видалено лишні тегі
+- Видалено лишні відступи і переходи
+- feat(main.css): Видалено лишні/повторювані теги
+
+"Перевірити сторінку у режимі лише клавіатурної навігації та описати результат":
+Працює і переходить
+-->
