coments/additional task

--- a/Homework/09/25/index.html
+++ b/Homework/09/25/index.html
@@ -40,4 +40,6 @@
 
 "Перевірити сторінку у режимі лише клавіатурної навігації та описати результат":
 Працює і переходить
+
+Катя Каташинська лежала в лікарні і не змогла виконати свою частину
 -->
