--- a/Practical/10/06/inedex.html
+++ b/Practical/10/06/inedex.html
@@ -66,10 +66,23 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="about">
+            <h2>Про мене</h2>
+            <p>Мене звати Катя.Я цікавлюся розробкою сайтів.</p>
+           </section> 
             <article>
+                 <h1>Моє Портфоліо</h1>
             </article>
-            <!--content-->
+            <section  class="projects">
+                <h2>Мої Проекти</h2>
+                <p>Розробила кілька навчальних сайтів</p>
+            </section>
+            <section  class="contact">
+                <h2>Контакти</h2>
+                <p>katakatashunska@gmail.com</p>
+                <p>+38095884563</p>
+            </section>
+         <!--content-->
         </section>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
