--- a/Practical/10/06/inedex.html
+++ b/Practical/10/06/inedex.html
@@ -65,11 +65,31 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section>
-            <article>
-            </article>
-            <!--content-->
+        <nav id="nav">
+            <ul>
+                <li><a href="#about">Про мене</a></li>
+                <li><a href="#projects">Проєкти</a></li>
+            </ul>
+        </nav>
+
+     <main>
+        <section class="about" id="about">
+            <h1>Про мене</h1>
+            <p>Я починаючий веб-розробник, захоплений створенням сучасних та адаптивних сайтів.</p>
+        </section>
+
+        <section class="projects" id="projects">
+            <h2>Проєкти</h2>
+            <p>Тут ви знайдете приклади моїх робіт: лендінги, блог-сайти та інші.</p>
+        </section>
+
+        <section class="contact" id="contact">
+            <h2>Контакти</h2>
+            <p>Email: example@example.com</p>
+        </section>
+    </main>
+
+    </body>
         </section>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
