--- a/Practical/10/08/inedex.html
+++ b/Practical/10/08/inedex.html
@@ -61,10 +61,33 @@
         </nav>
     </header>
     <main>
-        <section>
-            <article>
-            </article>
-            <!--content-->
+        <section class="features">
+          <h1>Особливості</h1>
+          <div class="feature-item">
+            <h3>Швидкість</h3>
+            <p>Наш сервіс працює блискавично швидко завдяки оптимізації.</p>
+          </div>
+          <div class="feature-item">
+            <h3>Безпека</h3>
+            <p>Захищаємо ваші дані за сучасними стандартами.</p>           
+          </div>
+        </section>
+
+        <section class="team">
+            <h1>Наша команда</h1>
+            <div class="team-bg"></div>
+            <div class="team-members">
+                <div class="member-card">
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.oZJgOJBaey-NV5NOjthwqwAAAA?cb=12&w=300&h=300&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Іван">
+                    <h3>Іван</h3>
+                    <p>Розробник</p>
+                </div>
+                <div class="member-card">
+                    <img src="https://th.bing.com/th/id/OIP.-s1RMH1gLYw_7DbZh0aoTgHaLH?w=204&h=306&c=7&r=0&o=7&cb=12&dpr=1.3&pid=1.7&rm=3" alt="Олена">
+                    <h3>Олена</h3>
+                    <p>Дизайнер</p>
+                </div>
+           </div>
         </section>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
