--- a/Practical/10/08/inedex.html
+++ b/Practical/10/08/inedex.html
@@ -54,18 +54,27 @@
 </head>
 <body>
     <header> 
-        <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <nav class="navbar fixed-top bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="inedex.html">Сайт з великими фоновими блоками</a>
+                <a class="navbar-brand" href="#">
+                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    Сайт з великими фоновими блоками
+                </a>
             </div>
         </nav>
     </header>
     <main>
-        <section>
-            <article>
-            </article>
-            <!--content-->
-        </section>
+        
+
+
+
+        <button type="button" class="btn btn-primary btn-lg fixed-bottom">Замовити</button>
+
+        <div class="parallelogram"></div>
+        <div class="triangle-down"></div>
+        <div class="trapezoid "></div>
+        <div class="circle"></div>
+        <div class="oval"></div>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
