--- a/Practical/10/08/index.html
+++ b/Practical/10/08/index.html
@@ -56,7 +56,7 @@
     <header> 
         <nav class="navbar fixed-top bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="tg.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     Сайт з великими фоновими блоками
                 </a>
@@ -64,6 +64,21 @@
         </nav>
     </header>
     <main>
+<!--
+
+
+
+
+                                                    ! Важливо
+Файли які зробила Каташинська знаходяться у папці Каташинська. Томущо у середу у неї на комп'ютері не захотів працювати
+git і у зв'язку з тим що на потрібно було іти у інший кабінет я взяв копію її коду собі на флешку і з'єднав вручну.
+*Її файли я не чіпав. Код такий який писала вона
+
+
+
+
+
+-->
         <section class="features">
             <div class="parallelogram"></div>
             <div class="triangle-down"></div>
