--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </style>
     </head>
     <body>
-        <h1>My homeworks:</h1>
+        <h1>WebDevGroup homeworks:</h1>
         <ul id="pages-list"></ul>
         <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
         
