--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 'Homework/09/25',
                 'Practical/09/22',
                 'Practical/10/06',
-                'Practical/10/08'
+                'Practical/10/08',
+                'Practical/10/29'
 			];
         
             const list = document.getElementById('pages-list');
