--- a/Practical/10/29/contacts.html
+++ b/Practical/10/29/contacts.html
@@ -41,7 +41,7 @@
                         { "@type": "ListItem", "position": 1, "name": "Головна", "item": "https://selector0073webdevgroup.netlify.app/" },
                         { "@type": "ListItem", "position": 2, "name": "Статті", "item": "https://selector0073webdevgroup.netlify.app/blog" },
                         { "@type": "ListItem", "position": 3, "name": "Про автора", "item": "https://selector0073webdevgroup.netlify.app/about" },
-                        { "@type": "ListItem", "position": 3, "name": "Контакти", "item": "https://selector0073webdevgroup.netlify.app/contacts" }
+                        { "@type": "ListItem", "position": 4, "name": "Контакти", "item": "https://selector0073webdevgroup.netlify.app/contacts" }
                         ]
                 }
             ]
@@ -80,7 +80,9 @@
         </nav>
     </header>
     <main>
-        <!--Сайт-->
+        <h1>Контакти</h1>
+        <p>Номер телефону: +3333333333</p>
+        <p>E-mail: aaa@gmail.com</p>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
