--- a/Practical/10/29/about.html
+++ b/Practical/10/29/about.html
@@ -64,7 +64,7 @@
     <header> 
         <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Navbar</a>
+                <a class="navbar-brand" href="index.html">Блог про подорожі</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -80,7 +80,8 @@
         </nav>
     </header>
     <main>
-        <!--Сайт-->
+        <h1>Про нас</h1>
+        <p>Це сайт зроблено як практична робота групою з веб розробки</p>
     </main>
     <footer>Selector0073 | Каріна Батура | Катя Каташинська</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
